# viewer3d_occt_qt

./: CMakeLists.txt  README.md  sample_ops.json  vcpkg.json
scripts/: build.ps1  package.ps1
src/: MainWindow.cpp  MainWindow.h  OcctViewer.cpp  OcctViewer.h  main.cpp
